--- a/Lab1/css/custom.css
+++ b/Lab1/css/custom.css
@@ -21,3 +21,14 @@ body {
 h1 {
 	font-family: 'Fjalla One', sans-serif;
 }
+
+/*
+h2 {
+	font-family: 'Yanone Kaffeesatz', sans-serif;
+}
+
+h4, h5 {
+	font-family: 'Saira Condensed', sans-serif;
+}
+*/
+
