Add CSS shadows

--- a/Lab1/css/custom.css
+++ b/Lab1/css/custom.css
@@ -34,4 +34,13 @@ h1 {
 	color: white;
 	padding-left: 30px;
 	padding-right: 30px;
+	box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.2), 0 0 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.jumbotron {
+	box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.2), 0 0 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.navbar {
+	box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.2), 0 0 20px 0 rgba(0, 0, 0, 0.19);
 }
